--- a/HotelService/src/main/resources/application.yml
+++ b/HotelService/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8084
+  port: 8082
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/hotelservice
@@ -13,4 +13,14 @@ spring:
     
   application:
     name: HotelService
+    
+eureka:
+  instance:
+    prefer-ip-address: true
+    
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
   
