--- a/HotelService/src/main/resources/application.yml
+++ b/HotelService/src/main/resources/application.yml
@@ -13,14 +13,14 @@ spring:
     
   application:
     name: HotelService
-    
-eureka:
-  instance:
-    prefer-ip-address: true
-    
-  client:
-    fetch-registry: true
-    register-with-eureka: true
-    service-url:
-      defaultZone: http://localhost:8761/eureka
+#    
+#eureka:
+#  instance:
+#    prefer-ip-address: true
+#    
+#  client:
+#    fetch-registry: true
+#    register-with-eureka: true
+#    service-url:
+#      defaultZone: http://localhost:8761/eureka
   
