okta client implemented

--- a/HotelService/src/main/resources/application.yml
+++ b/HotelService/src/main/resources/application.yml
@@ -13,6 +13,13 @@ spring:
     
   application:
     name: HotelService
+    
+    
+okta:
+  oauth2:
+    issuer: https://dev-59401106.okta.com/oauth2/default
+    audience: api://default
+    
 #    
 #eureka:
 #  instance:
